<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vishwam</string>
    <string name="label_end_to_end">End to End Employee App</string>
    <string name="label_powered_by" tools:ignore="MissingTranslation">Powered by Apollo Pharmacy</string>
    <string name="label_order_header" tools:ignore="MissingTranslation">Order #</string>
    <string name="label_contact_number">Contact No.</string>
    <string name="label_otp_verification">1. Pickup OTP verify</string>
    <string name="label_completed_delivery">5. Completed Delivery</string>
    <string name="label_order_completed_successfully">Order Completed Successfully</string>
    <string name="label_order_cancel">CANCEL ORDER</string>
    <string-array name="Pages">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>

    </string-array>
    <string name="label_pickup_instructions">Pickup Instructions</string>
    <string name="label_reached_the_store">1. Reached the Store</string>
    <string name="label_verify_otp">Verify OTP</string>
    <string name="label_otp_verification_completed">OTP Verification completed\nSuccessfully</string>
    <string name="label_p">P</string>
    <string name="label_d">D</string>
    <string name="label_total_amount">Total Amount:</string>
    <string name="label_refund_amount">Refund Amount:</string>
    <string name="label_map_view">Map View</string>
    <string name="label_order_complaint">COMPLAINT</string>
    <string name="label_complaint_reason_header">Write reason below for complaint</string>
    <string name="label_apollo_pharmacy">Apollo Pharmacy</string>
    <string name="noAccessTo">You can not use location , because you denies the location permission\nGo to app info and enable permission manually</string>
    <string name="label_item_name">Item Name</string>
    <string name="label_qty">Qty.</string>
    <string name="label_cost">Cost</string>
    <string name="label_item_total">Item Total:</string>
    <string name="label_delivery_charges">Delivery Chargers:</string>
    <string name="label_packing_charges">Packing Charges:</string>
    <string name="label_grand_total">Grand Total:</string>
    <string name="label_instructions">INSTRUCTIONS</string>
    <string name="label_instruction_one">Parcel contains Drugs with glass packed, handle with care</string>
    <string name="label_instruction_two">"Don't tilt the box, it should be handled as per the instructions on the box"</string>
    <string name="label_reject_reason_header">Write reason below for rejecting the order</string>
    <string name="label_send">SEND</string>
    <string name="input_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_network_error">Please Check Internet Connection</string>
    <string name="label_confirm_logout">Are you sure you want to Logout?</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="label_something_wrong_try_later">Something went wrong, please try again later</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_check">Please confirm the Employee ID</string>
    <string name="please_check_employee_id">, at this stage itself there is no provision to change the Employee ID after validation</string>
    <string name="please_check_verification_code">Please check the verification code sent to\n</string>
    <string name="please_type_the_verification_code_sent_to_">Verification code sent to</string>
    <string name="label_resend_OTP">Resend OTP</string>
    <string name="nav_header_title">Muddaraboina Naveen</string>
    <string name="nav_header_subtitle">+91 9177551736</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="label_welcome_rider">Welcome Rider</string>
    <string name="permission_location_need_body">This app needs the Location permission, please allow to access the location</string>
    <string name="permission_location_need_title">Location Permission Needed</string>
    <string name="ok">OK</string>
    <string name="no_interent">Please Check Your Network Connection</string>
    <string name="label_user_name">User Name</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_submit">Submit</string>
    <string name="label_select">Select</string>
    <string name="label_select_item_type">Select Item Type  <font color='#FF0000'>*</font></string>
    <string name="label_select_doctor_speciality">Select Doctors Speciality  <font color='#FF0000'>*</font></string>
    <string name="err_msg_select_gst">Please Select GST</string>
    <string name="err_msg_select_site">Please Select Site Id</string>
    <string name="err_msg_select_cat">Please Select Category</string>
    <string name="err_msg_select_mnfDate">Please Select Date</string>
    <string name="err_msg_select_expDate">Please Select Date</string>
    <string name="err_msg_select_nam">Please Enter Item Name</string>
    <string name="err_msg_select_batc">Please Enter Batch Number</string>
    <string name="err_msg_select_mrp">Please Enter Mrp</string>
    <string name="err_msg_select_purprice">Please Enter Purchase Price</string>
    <string name="err_msg_select_bar">Please Enter Bar Code</string>
    <string name="err_msg_select_hsn">Please Enter HSN Code</string>
    <string name="err_msg_select_packsize">Please Enter Pack Size</string>
    <string name="label_complaint_reg">Complaint Registration</string>
    <string name="label_complaint_list">Complaint List</string>
    <string name="label_search_by">Search By</string>
    <string name="label_rupee_symbol">\u20B9</string>
    <string name="menu_take_order">New Order</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_reports">Cash Deposits</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_complaints">Complaints</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_delivery_order">Delivery Order</string>
    <string name="label_email_hint">Email or Username</string>
    <string name="label_password_hint">Password</string>
    <string name="label_forgot_password"><u>Forgot Password?</u></string>
    <string name="label_signin">SIGN IN</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="label_type_pharmacy">P</string>
    <string name="label_type_delivery">D</string>
    <string name="label_select_site_id">Select Store  <font color='#cc0029\'></font></string>
    <string name="label_select_department">Select Department <font color='#cc0029\'>*</font></string>
    <string name="label_select_category">Select Category  <font color='#FF0000'>*</font></string>
    <string name="label_select_sub_category">Select Sub Category  <font color='#FF0000'>*</font></string>
    <string name="label_select_remarks">Select Reason  <font color='#FF0000'>*</font></string>
    <string name="label_select_gst">Select GST  <font color='#FF0000'>*</font></string>
    <string name="label_select_reason">Select Reason  <font color='#FF0000'>*</font></string>
    <string name="label_total_text">total:</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_presence">Presence</string>
    <string name="label_total_orders">Total\nOrders</string>
    <string name="label_delivered_orders">Delivered\nOrders</string>
    <string name="label_cancelled_orders">Cancelled\nOrders</string>
    <string name="label_cod_received"> \nCOD Received</string>
    <string name="label_cod_pending">COD\nPending Deposits</string>
    <string name="labels_sales_generated">SALES Generated</string>
    <string name="label_distance_travelled">Distance Travelled</string>
    <string name="label_you_got">You got</string>
    <string name="label_since_problem_raise">Date of Occurrence <font color='#FF0000'>*</font></string>
    <string name="label_problem_with">Problem With  <font color='#FF0000'>*</font></string>
    <string name="label_code_available_ax">Code available in Ax</string>
    <string name="label_new_batch">New Batch  <font color='#FF0000'>*</font></string>
    <string name="label_check_site">Please Select any Site ID, before checking Complaints List</string>
    <string name="label_check_dates">From date should be less than To date</string>
    <string name="message" translatable="false">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="turn_off_flashlight" translatable="false">FlashLight On</string>
    <string name="turn_on_flashlight" translatable="false">FlashLight Off</string>
    <string name="label_scan_barcode">Fetch the Product information by using barcode, scan in the below box</string>
    <string name="label_distribution_center">Distribution Center  <font color='#FF0000'>*</font></string>
    <string name="label_short_expire">Short Expire</string>
    <string name="label_expire">Expire</string>
    <string name="label_purchase_price">Purchase Prise</string>
    <string name="label_article_code">Article Code</string>
    <string name="label_batch">Batch</string>
    <string name="label_enter_mrp">Enter MRP</string>
    <string name="label_enter_purchase_price">Enter Purchase Price</string>
    <string name="hint"><font size="16">Enter Store Name / ID</font></string>
    <string name="label_select_expire_date">Select Expire Date</string>
    <string name="label_problem_description">Complaint Description  <font color='#FF0000'>*</font></string>
    <string name="label_upload_image">Capture and Upload Image</string>
    <string name="label_attach_images">Please Attach Front and Back Images</string>
    <string name="label_no_history">No Attendance History!</string>
    <string name="label_serial_no">S.No</string>
    <string name="label_duration_header">Duration</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_sign_out">Sign Out</string>
    <string name="label_new">New</string>
    <string name="label_in_progress">In Progress</string>
    <string name="label_resolved">Resolved</string>
    <string name="label_rejectedd">Rejected</string>
    <string name="label_reopen">Reopen</string>
    <string name="label_closed">Closed</string>
    <string name="label_on_hold">OnHold</string>
    <string name="label_filters_by_status">Filters by status</string>
    <string name="label_apply">Apply</string>
    <string name="stringid">ID:</string>
    <string name="string32564">32564</string>
    <string name="string_services">(services)</string>
    <string name="stringsite_id">Site ID</string>
    <string name="string16001_apollo_jubileehills">(16001)</string>
    <string name="stringcustomer_name">Customer Name</string>
    <string name="stringkrishna">Krishna</string>
    <string name="stringcreated_by">Created by</string>
    <string name="stringmadhusudhan_apl4936">Madhusudhan</string>
    <string name="stringservice_name">Services</string>
    <string name="stringfirst_aid_sugar_check">First Aid, Sugar Check</string>
    <string name="stringothers">Others</string>
    <string name="stringcreated_date">Created Date</string>
    <string name="string2023_05_25">2023-05-25</string>
    <string name="stringcustomer_mobile_no">Customer Mobile No.</string>
</resources>