<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--  <RelativeLayout
              android:layout_width="@dimen/dimen500dp"
              android:layout_height="wrap_content"
              android:background="@drawable/dialog_services_bg">-->

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_50dp"
            android:background="@color/vishwam_actionbar_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/value_10dp"
                android:text="@string/stringid"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp" />

            <TextView
                android:id="@+id/services_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/value_5dp"
                android:layout_toEndOf="@id/id"
                android:text="@string/string32564"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/value_2dp"
                android:layout_marginTop="@dimen/eighteen18_dp"
                android:layout_toEndOf="@id/services_id"
                android:text="@string/string_services"
                android:textColor="@color/white"
                android:textSize="@dimen/text_dimen_13"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/close_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/value_15dp"
                android:src="@drawable/closee_whitee" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginStart="@dimen/value_10dp"
            android:layout_marginTop="@dimen/value_6dp"
            android:layout_marginEnd="@dimen/value_10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/value_40dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/stringsite_id"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/site_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string16001_apollo_jubileehills"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_10dp"
                    android:hint="@string/stringcustomer_name"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stringkrishna"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_10dp"
                    android:hint="@string/stringcreated_by"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/created_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/stringmadhusudhan_apl4936"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_10dp"
                    android:hint="@string/stringservice_name"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/service_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stringfirst_aid_sugar_check"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_10dp"
                    android:hint="@string/stringothers"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/stringcreated_date"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/customer_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string2023_05_25"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_10dp"
                    android:hint="@string/stringcustomer_mobile_no"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/customer_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="91******32"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>