<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isNewChecked"
            type="Boolean" />

        <variable
            name="isInProgressChecked"
            type="Boolean" />

        <variable
            name="isResolvedChecked"
            type="Boolean" />

        <variable
            name="isRejectedChecked"
            type="Boolean" />

        <variable
            name="isReopenChecked"
            type="Boolean" />

        <variable
            name="isClosedChecked"
            type="Boolean" />

        <variable
            name="isOnHoldChecked"
            type="Boolean" />

        <variable
            name="isSubmitEnable"
            type="Boolean" />

        <variable
            name="isSelectAllChecked"
            type="Boolean" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialogue_bg_">

        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splash_start_color"
            android:paddingTop="@dimen/value_15dp"
            android:paddingBottom="@dimen/value_15dp">

            <TextView
                android:id="@+id/textHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_dimen_10"
                android:gravity="start"
                android:text="@string/label_filters_by_status"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/close_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:paddingStart="@dimen/value_10dp"
                android:paddingEnd="@dimen/value_10dp"
                android:src="@drawable/close_icon"
                app:tint="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_layout"
            android:orientation="vertical"
            android:paddingStart="@dimen/value_5dp"
            android:paddingEnd="@dimen/value_5dp"
            android:paddingBottom="@dimen/value_5dp">

            <RelativeLayout
                android:id="@+id/select_all_checkbox_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/select_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_3dp"
                    android:buttonTint="@color/sky_bluee"
                    android:checked="@{isSelectAllChecked}"
                    android:clickable="false"
                    android:text="Select all"
                    android:textColor="@color/grey"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/value_2dp"
                android:background="@color/grey" />

            <!--            <RadioGroup-->
            <!--                android:id="@+id/status_radio_group"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="vertical"-->
            <!--                tools:ignore="UselessParent">-->

            <CheckBox
                android:id="@+id/new_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_3dp"
                android:buttonTint="@color/sky_bluee"
                android:checked="@{isNewChecked}"
                android:text="@string/label_new"
                android:textStyle="bold" />

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0.5dp"-->
            <!--                android:layout_marginTop="@dimen/value_2dp"-->
            <!--                android:background="@color/grey" />-->

            <CheckBox
                android:id="@+id/in_progress_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/sky_bluee"
                android:checked="@{isInProgressChecked}"
                android:text="@string/label_in_progress"
                android:textStyle="bold" />

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0.5dp"-->
            <!--                android:layout_marginTop="@dimen/value_2dp"-->
            <!--                android:background="@color/grey"-->
            <!--                android:buttonTint="@color/splash_start_color" />-->

            <CheckBox
                android:id="@+id/resolved_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/sky_bluee"
                android:checked="@{isResolvedChecked}"
                android:text="@string/label_resolved"
                android:textStyle="bold" />

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0.5dp"-->
            <!--                android:layout_marginTop="@dimen/value_2dp"-->
            <!--                android:background="@color/grey" />-->

            <CheckBox
                android:id="@+id/rejected_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/sky_bluee"
                android:checked="@{isRejectedChecked}"
                android:text="@string/label_rejectedd"
                android:textStyle="bold" />

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0.5dp"-->
            <!--                android:layout_marginTop="@dimen/value_2dp"-->
            <!--                android:background="@color/grey" />-->

            <CheckBox
                android:id="@+id/reopen_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/sky_bluee"
                android:checked="@{isReopenChecked}"
                android:text="@string/label_reopen"
                android:textStyle="bold" />

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0.5dp"-->
            <!--                android:layout_marginTop="@dimen/value_2dp"-->
            <!--                android:background="@color/grey" />-->

            <CheckBox
                android:id="@+id/closed_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/sky_bluee"
                android:checked="@{isClosedChecked}"
                android:text="@string/label_closed"
                android:textStyle="bold" />

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0.5dp"-->
            <!--                android:layout_marginTop="@dimen/value_2dp"-->
            <!--                android:background="@color/grey" />-->

            <CheckBox
                android:id="@+id/onhold_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/sky_bluee"
                android:checked="@{isOnHoldChecked}"
                android:text="@string/label_on_hold"
                android:textStyle="bold" />

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0.5dp"-->
            <!--                android:layout_marginTop="@dimen/value_2dp"-->
            <!--                android:background="@color/grey" />-->

            <!--            </RadioGroup>-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_width="@dimen/value_100dp"
                android:layout_height="@dimen/value_35dp"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/value_5dp"
                android:background="@drawable/dark_blue_bg_for_btn"
                android:enabled="@{isSubmitEnable}"
                android:text="@string/label_apply"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14sp" />

        </LinearLayout>


    </RelativeLayout>


</layout>
